hphp/hack/test/typecheck/deprecated_inst_meth.php.exp
File "deprecated_inst_meth.php", line 9, characters 24-28:
The method foo is deprecated: use bar() instead (Typing[4128])
File "deprecated_inst_meth.php", line 5, characters 19-21:
Definition is here
